--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,81 @@
+html {
+  height: 100%;
+  width: 100%;
+}
 
+body {
+  height: 100%;
+  margin: 0;
+  background: #fff;
+  /*linear-gradient(180deg, #b0e5f2 0%, #b0e5f2 40%, #c5d8a4 50%, #c5d8a4 100%)*/
+  ;
+}
+
+#start {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background: #89d0ed;
+  color: #fff;
+  z-index: 9999;
+}
+
+#start p {
+  display: none;
+  font-family: 'Reenie Beanie', sans-serif;
+  position: fixed;
+  margin: 0;
+  font-size: 3em;
+  display: none;
+}
+
+#main {
+  font-family: "游ゴシック Light", "游ゴシック", "YuGothic", sans-serif;
+  font-weight: 200;
+  background: #fff;
+}
+
+#main p {
+  margin: 0;
+}
+
+.no-display {
+  display: none;
+}
+
+#menu {
+  width: 30%;
+  height: 100%;
+  background: #89d0ed;
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #fff;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+#menu ul li {
+  list-style: none;
+  padding: 20px 0;
+}
+
+#menu a {
+  text-decoration: none;
+  color: #fff;
+}
+
+h1 {
+  margin: 0;
+}
