--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,17 @@
 html {
   height: 100%;
   width: 100%;
+  background: #ccc
 }
 
 body {
   height: 100%;
   margin: 0;
-  background: #fff;
+  background: #89d0ed;
   /*linear-gradient(180deg, #b0e5f2 0%, #b0e5f2 40%, #c5d8a4 50%, #c5d8a4 100%)*/
-  ;
 }
 
+/*スタートページ*/
 #start {
   width: 100%;
   height: 100%;
@@ -33,45 +34,57 @@ body {
   display: none;
 }
 
+/*メインページ*/
 #main {
   font-family: "游ゴシック Light", "游ゴシック", "YuGothic", sans-serif;
   font-weight: 200;
   background: #fff;
+  height: 100%;
+  width: 70%;
+  display: none;
+}
+
+#main_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 #main p {
   margin: 0;
 }
 
-.no-display {
-  display: none;
-}
-
 #menu {
   width: 30%;
   height: 100%;
-  background: #89d0ed;
   position: absolute;
   right: 0;
   top: 0;
-  color: #fff;
+  background: #89d0ed;
   font-size: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
 }
 
-#menu ul {
+#menu_navi {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#menu_navi ul {
   margin: 0;
   padding: 0;
 }
 
-#menu ul li {
+#menu_navi ul li {
   list-style: none;
   padding: 20px 0;
 }
 
-#menu a {
+#menu_navi a {
   text-decoration: none;
   color: #fff;
 }
